--- a/config.env
+++ b/config.env
@@ -1,7 +1,8 @@
 #All Variables Are Required
-BOT_TOKEN = "7156255687:AAEXQtlTzE8Jbwt9VD6NLfcZX08Czu7w7gQ"
-TELEGRAM_API = "22505271"
-TELEGRAM_HASH = "c89a94fcfda4bc06524d0903977fc81e"
-FSUB_ID = "-1002108419450"
-DUMP_CHAT_ID = "-1002062925443"
-MONGO_URL = "mongodb+srv://ultroidxTeam:ultroidxTeam@cluster0.gabxs6m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+BOT_TOKEN = "6748708552:AAEya6awhAuxwhR7ujfPWsko7j1GkCjPWjk"
+TELEGRAM_API = "21863401"
+TELEGRAM_HASH = "5f7d3dc656c008c70bffdf7f4f9b8ebb"
+FSUB_ID = "-1001830594381"
+DUMP_CHAT_ID = "-1001830594381"
+MONGO_URL = "mongodb+srv://molasa7348:29TiLiVemOcKUmxf@cluster0.9dkky.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+ADMINS = "6230356497"
