--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 #All Variables Are Required
-BOT_TOKEN = "6748708552:AAEya6awhAuxwhR7ujfPWsko7j1GkCjPWjk"
+BOT_TOKEN = "674870"
 TELEGRAM_API = "21863401"
-TELEGRAM_HASH = "5f7d3dc656c008c70bffdf7f4f9b8ebb"
+TELEGRAM_HASH = ""
 FSUB_ID = "-1001830594381"
 DUMP_CHAT_ID = "-1001830594381"
-MONGO_URL = "mongodb+srv://molasa7348:29TiLiVemOcKUmxf@cluster0.9dkky.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL = "+srv://:@cluster0.9dkky.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 ADMINS = "6230356497"
